# ISFGLSLGenerator

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  lib_build_and_install_script.sh
ISFGLSLGeneratorProject.xcodeproj/: project.pbxproj
app/: CMakeLists.txt  main.cpp
libISFGLSLGenerator/: CMakeLists.txt  Info.plist
libISFGLSLGenerator/include/: ISFDoc.hpp  ISFPassTarget.hpp  ISFVal.hpp  VVISF.hpp  VVISF_Base.hpp  VVISF_Constants.hpp
libISFGLSLGenerator/src/: ISFDoc.cpp  ISFPassTarget.cpp  ISFVal.cpp  VVISF_Base.cpp  VVISF_StringUtils.cpp
